# alis

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  Makefile Atari  NOTES  README  README.md  TODO  TODO.md
alis/: addnames.c  alis.c  alis.h  config.h  debug.c  debug.h  disasm.c  disasm.h  disasm_private.h  escnames.c  main.c  opcodes.c  opernames.c  platform.c  platform.h  script.c  script.h  script2.c  script2.h  storenames.c  utils.c  utils.h  vram.h
alis/depack/: asm.c  asm.h
alis/sys/: sys.h
alis/sys/sdl2/: sys_sdl2.c
blog/: 0-intro.txt  1-environment  2-depacker  3-flow
data/: IS1-FALCON-START.PRG  IS2-FALCON-START.PRG  IS3-FALCON-START.PRG
data/ishar/atari/: AFFOBJ.AO  AZAL.AO  BARBARE.AO  BORMIN.AO  DPLT.AO  EN1.AO  ENCONT.AO  FOND.AO  FONTAINE.AO  FRAGORN.AO  GEREN.AO  INCAVE.AO  KIRIELA.AO  KROG.AO  LACUSTRE.AO  MINOTOR.AO  MOMO.AO  MORGU.AO  NAIM.AO  ORC.AO  PCAVE.AO  PLAINE.AO  PRESTI.AO  RAMPART.AO  SCOMB.AO  SORCIER.AO  SOSI.AO  SPIDER.AO  STAGE.AO  TEXTINE.AO  TEXTINI.AO  VILLAGE.AO  VILLE.AO  WIZ1.AO  auteur.ao  cont6.fic  darkm.ao  darkwiz.ao  dead.ao  dragon.ao  (+10 more)
data/ishar/dos/: affobj.io  affobj.strip  arbre.io  auteur.io  azal.io  barbare.io  blancpc.io  bormin.io  buf_souris.io  buste.io  colcave.io  cont1.fic  cont2.fic  cont3.fic  cont4.fic  cont5.fic  cont_all.fic  cont_guess.txt  contflip.c  contflip.fic  darkm.io  darkwiz.io  dead.io  dealer.io  dplt.io  dragon.io  dwarrior.io  en1.fic  en1.io  encont.io  fbuis.io  fcave.io  fcave2.io  fond.io  fontaine.io  foret.io  fragorn.io  frise.io  ftemple.io  fville.io  (+77 more)
data/ishar/falcon/: DEPACKED.PRG  IS_F_CR.PRG
data/ishar2/atari/: AFFOBJ.AO  ANIMALS.AO  ARBO.AO  BUSTE.AO  DJ1.AO  DJ2.AO  DJCAT.AO  DJCOL.AO  DWIZARD5.AO  DWOMAN2.AO  EAFF.AO  EATT.AO  ELMTAIR5.AO  ELMTFEU5.AO  ENT2.AO  EWOK2.AO  FDJCAT.AO  FMONT.AO  FORET1.AO  GEANT.AO  GERDEP.AO  GESORT.AO  GOLEM1.AO  GUARD4.AO  HOMOIS2.AO  HORNY4.AO  LEZARD1.AO  LIONMAN5.AO  LOGO.AO  MAP.AO  MARCHAND.AO  MEDUSA5.AO  MESSAGE.AO  MESSAGED.AO  MOMY5.AO  MONTAGNE.AO  ORK5.AO  PLAINE1.AO  PP11.AO  PP12.AO  (+29 more)
data/ishar2/dos/: UNSTART.asm  UNSTART.i64  UUP0.TMP  UUP1.TMP  UUP3.TMP  affobj.io  aigle.io  animals.io  arbo.io  aveugle5.io  boat.io  bob4.io  buste.io  buste2.io  chaosgu5.io  cont.fic  cont3.fic  cont4.fic  cont5.fic  dj1.io  dj2.io  djcat.io  djcol.io  djdec.io  djfont.io  djtrap.io  dragon5.io  druide2.io  druide4.io  (+125 more)
data/ishar_-_legend_of_the_fortress_[falcon030]_silmarils/: ishar_-_legend_of_the_fortress_[falcon030]_silmarils_a.ST  ishar_-_legend_of_the_fortress_[falcon030]_silmarils_b.ST
data/ishar_ii_-_messengers_of_doom_[falcon030]_silmarils/: ishar_ii_-_messengers_of_doom_[falcon030]_silmarils_a.ST  ishar_ii_-_messengers_of_doom_[falcon030]_silmarils_b.ST
data/ishar_iii_-_the_seven_gates_of_infinity_[falcon030]silmarils/: ishar_iii_-_the_seven_gates_of_infinity_falcon_silmarils_4.ST  ishar_iii_-_the_seven_gates_of_infinity_falcon_silmarils_a.ST  ishar_iii_-_the_seven_gates_of_infinity_falcon_silmarils_b.ST  ishar_iii_-_the_seven_gates_of_infinity_falcon_silmarils_c.ST  ishar_iii_-hack.ST
ghidra/ghidra_scripts/: ImportAtariPRG.py  MarkALIS.py
ghidra/ishar_falcon.rep/: projectState
imgui/: imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_memory_editor.h
imgui/macos/: main.mm
macos/: imgui.ini
macos/alis.xcodeproj/: project.pbxproj
python/: FUN_STARTUP.c  alis.py  alis_defs.py  alis_fptrs.py  alis_vm.py  debug_ui.py  gen_alis_fptrs.py  host.py  log_explorer.py  main.py  opcodes.py  parse_steem_log.py  sys_io.py
samples/: pcm2wav.sh
src/: RRQMenu2Game.c  addnames.c  alis.c  alis.h  alis_private.h  audio.c  audio.h  channel.c  channel.h  config.h  debug.c  debug.h  escnames.c  export.c  export.h  image.c  image.h  main.c  mem.c  mem.h  mess.c.bak  newalis.c  opcodes.c  opernames.c  platform.c  platform.h  render3d.c  render3d.h  render3d_68k.c  render3d_68k.h  render3d_dos.c  render3d_dos.h  screen.c  screen.h  script.c  script.h  storenames.c  unpack.c  unpack.h  utils.c  (+5 more)
src/audio/: audio.c  audio.h  music_v1.c  music_v2.c
src/depack/: asm.c  platform.c  platform.h  unpack.c  unpack.h
src/emu2149/: CMakeLists.txt
src/icons/: icons
src/mess/: experimental.c  experimental.h  extractor.cpp  extractor.h
src/sys/: sys.c  sys.h  sys_sdl1.c  sys_sdl2.c
tools/: Blank Disk.st  MarkALIS.py  STARTCR.DUAL.S  addr_atent.sample  addr_atprog.sample  hardware.txt  logo.asm  main.asm  offsets.numbers  ops.csv  ops.numbers  scripts.numbers  todo.numbers
tools/Steem.SSE.4.0.2.Debug.Win32.DD/: FrameReport.txt  PastiDll.txt  PastiHdisk.txt  Steem SSE Debugger 4.0.2.rtf  auto_reset_backup.sts  steem.ini  steem.ini.bak
tools/Steem.SSE.4.0.2.Debug.Win64.DD/: FrameReport.txt  MSAa571.tmp  Steem SSE 4.0.2.rtf  Steem SSE Debugger 4.0.2.rtf  TOS v1.62 (1990)(Atari Corp)(STE)(Fr).img.lnk  allfuncs.csv  auto_loadsnapshot_backup.sts  auto_reset_backup.sts  ghidra_all_funcs_is2elite.json  logo_animating.txt  logo_mouseclick.txt  map.dump  startup_to_logo_opcodes.csv  stats.rtf  steem.ini  steem_allfuncs_bps.ini  temp.txt
tools/disks/: Blank Disk.st  Ishar - Legend of the Fortress (1992)(Silmarils)(M4)(Disk 1 of 2)[cr Elite].st  Ishar - Legend of the Fortress (1992)(Silmarils)(M4)(Disk 2 of 2)[cr Elite].st  Ishar - with Ishar2 interpreter (Disk 1 of 2)[cr Elite].st  Ishar 2 - Messengers of Doom (1993)(Silmarils)(Disk 2 of 3)[cr Elite].st  Ishar 2 - Messengers of Doom (1993)(Silmarils)(Disk 3 of 3)[cr Elite].st  Leander (1991)(Psygnosis)(Disk 1 of 2)[cr Elite][t].st  Leander (1991)(Psygnosis)(Disk 2 of 2)[cr Elite][t].st  ishar_-_legend_of_the_fortress_daze_1 (copy).STX  ishar_-_legend_of_the_fortress_daze_2.STX
tools/hexfiend_templates/: README.md  beDepackedALIS.tcl  bePackedALIS.tcl  bePackedMainALIS.tcl  lePackedMainALIS.tcl
tools/pytools/: :*  alis.py  alis_disasm.py  check_offset.py  create_steem_breakpoints.py  parse_mem_dump.py  parse_steem_log.py  steem-main-logo-sequence
windows/: alis.sln  alis.vcxproj  alis.vcxproj.filters
windows/cmake/: cmake_cygwin.bat  cmake_mingw.bat  cmake_mingw_ucrt64.bat
(+332 files in other folders)
